--- a/templates/Login.html
+++ b/templates/Login.html
@@ -53,7 +53,7 @@
     <div class="content">
         <div class="login-box">
             <h2>Login to Your Account</h2>
-            <form action="login_process.html" method="post">
+            <form action="{{ url_for('Login') }}" method="post">
                 <div class="form-group">
                     <label for="email">Email Address</label>
                     <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
