--- a/templates/Register.html
+++ b/templates/Register.html
@@ -38,6 +38,11 @@
         .btn-primary {
             width: 100%;
         }
+        .error {
+            color: red;
+            text-align: center;
+            margin-bottom: 15px;
+        }
     </style>
 </head>
 <body>
@@ -53,6 +58,9 @@
     <div class="content">
         <div class="register-box">
             <h2>Create an Account</h2>
+            {% if error %}
+                <div class="error">{{ error }}</div>
+            {% endif %}
             <form action="{{ url_for('Register') }}" method="post">
                 <div class="form-group">
                     <label for="username">Username</label>
