--- a/templates/Home.html
+++ b/templates/Home.html
@@ -37,8 +37,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="{{ url_for('Home') }}">LectureInsightAI</a>
         <div class="ml-auto">
-            <a href="{{ url_for('Register') }}" class="btn btn-outline-primary mr-2">Register</a>
-            <a href="{{ url_for('Login') }}" class="btn btn-outline-secondary">Login</a>
+            <a href="{{ url_for('Logout') }}" class="btn btn-outline-secondary">Logout</a>
         </div>
     </nav>
 
