--- a/templates/Login.html
+++ b/templates/Login.html
@@ -15,7 +15,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: calc(100% - 56px);
+            height: calc(100% - 56px); 
         }
 
         .login-box {
@@ -38,6 +38,12 @@
         .btn-primary {
             width: 100%;
         }
+
+        .error {
+            color: red;
+            text-align: center;
+            margin-bottom: 15px;
+        }
     </style>
 </head>
 <body>
@@ -53,6 +59,9 @@
     <div class="content">
         <div class="login-box">
             <h2>Login to Your Account</h2>
+            {% if error %}
+                <div class="error">{{ error }}</div>
+            {% endif %}
             <form action="{{ url_for('Login') }}" method="post">
                 <div class="form-group">
                     <label for="email">Email Address</label>
